--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -29,6 +29,8 @@
               =link_to "Events", '/admin/conferences'
             %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/categories'}/)}"}
               =link_to "Categories", '/admin/categories'
+            %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/registrants'}/)}"}
+              =link_to "Registrants", '/admin/registrants'
             -#- project_modules.each do |project_module|
             -#  %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{project_module.path}/)}"}
             -#    =link_to project_module.human_name, project_module.path('/admin')
