updated company name

--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -18,7 +18,7 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
-          =link_to '2Vive', url(:base_index), :class => 'navbar-brand', :title => 'Padrino Admin'
+          =link_to 'AboveGEM', url(:base_index), :class => 'navbar-brand', :title => 'Padrino Admin'
           %ul.nav.pull-right
             %li.navbar-edit-account=link_to tag_icon(:user), url(:accounts, :edit, :id => current_account.id), :title => pat(:profile), :class => 'navbar-nav-link'
             %li.navbar-logout
@@ -46,7 +46,7 @@
         %p.pull-left
           Copyright &copy;
           =Time.now.year
-          2Vive Event Management
+          AboveGEM Event Management
         %ul.pull-right.footer-links
           %li= link_to tag_icon(:heart, 'contact us'), '#', :class => 'footer-links-link'
           %li= link_to tag_icon(:home, 'support'), '#', :class => 'footer-links-link'
