--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -18,7 +18,7 @@
     .navbar.navbar-fixed-top
       .navbar-inner
         .container
-          =link_to 'AboveGEM', url(:base_index), :class => 'navbar-brand', :title => 'Padrino Admin'
+          =link_to 'AboveGEM', url(:base_index), :class => 'navbar-brand', :title => 'AboveGEM Event Admin'
           %ul.nav.pull-right
             %li.navbar-edit-account=link_to tag_icon(:user), url(:accounts, :edit, :id => current_account.id), :title => pat(:profile), :class => 'navbar-nav-link'
             %li.navbar-logout
