updated index welcome message

--- a/admin/views/base/index.haml
+++ b/admin/views/base/index.haml
@@ -1,5 +1,5 @@
 .base-text.text-center
-  %p Welcome to 2Vive Event Management System Admin
+  %p Welcome to AboveGEM Event Management System Admin
 -#.base-icons
 -#  .btn-group
 -#    .btn.btn-primary{:title => "Adapters for datamapper, sequel, activerecord, mongomapper, mongoid, couchrest"}=tag_icon("cogs icon-2x", "Add Event")
