--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -33,6 +33,8 @@
               =link_to "Registrants", '/admin/registrants'
             %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/hosts'}/)}"}
               =link_to "Hosts", '/admin/hosts'
+            %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/medias'}/)}"}
+              =link_to "Media", '/admin/medias'
             -#- project_modules.each do |project_module|
             -#  %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{project_module.path}/)}"}
             -#    =link_to project_module.human_name, project_module.path('/admin')
