--- a/admin/views/medias/index.haml
+++ b/admin/views/medias/index.haml
@@ -28,7 +28,8 @@
         %th.header= mat(:medias, :id)
         %th.header= mat(:medias, :name)
         %th.header= mat(:medias, :media_type_id)
-        %th.header= File
+        %th.header File
+        %th.header Preview
         %th.header= mat(:medias, :created_at)
         %th.header= mat(:medias, :updated_at)
         %th.header.list-row-action-header
@@ -42,6 +43,9 @@
           %td.list-column=media.name
           %td.list-column=media.media_type_desc
           %td.list-column=media.location
+          %td.list-column
+            - if media.media_type_id == 1
+              = image_tag media.get_file_path, :style=>"width:100px;"
           %td.list-column=time_ago_in_words media.created_at
           %td.list-column=time_ago_in_words media.updated_at
           %td.list-column.list-row-action
