--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -25,20 +25,14 @@
               =button_to :logout, url(:sessions, :destroy), :method => :delete, :class => 'navbar-nav-form' do
                 =content_tag :button, tag_icon(:off), :type => :submit, :title => pat(:logout), :class => 'navbar-nav-form-link'
           %ul.nav.pull-left
-            %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/conferences'}/)}"}
-              =link_to "Events", '/admin/conferences'
-            %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/categories'}/)}"}
-              =link_to "Categories", '/admin/categories'
-            %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/registrants'}/)}"}
-              =link_to "Registrants", '/admin/registrants'
-            %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/hosts'}/)}"}
-              =link_to "Hosts", '/admin/hosts'
-            %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{'/medias'}/)}"}
-              =link_to "Media", '/admin/medias'
-            -#- project_modules.each do |project_module|
-            -#  %li{:class => "navbar-module #{('active' if request.path_info =~ /^#{project_module.path}/)}"}
-            -#    =link_to project_module.human_name, project_module.path('/admin')
-
+            - tabs = {'conferences' => "Events", 'news' => "News", 'categories' => "Categories", 'registrants' => "Registrants", 'hosts' => "Hosts", 'medias' => "Media", "media_types" => "Media Types"}
+            - tabs.each do |val, name|
+              %li{:class => "dropdown navbar-module #{('active' if request.path_info =~ /^#{'/' + val}/)}"}
+                =link_to name, "/admin/#{val}"
+                -#- if val == "medias"
+                -#  %ul.dropdown-menu
+                -#    %li
+                -#      =link_to "Media Types", "/admin/media_types"
     .container.main
       .main-wrapper
         =[:error, :warning, :success, :notice].map { |type| flash_tag(type, :class => "alert alert-#{type} fade in", :bootstrap => true) }.join.html_safe
