--- a/admin/views/medias/_form.haml
+++ b/admin/views/medias/_form.haml
@@ -15,7 +15,8 @@
 %fieldset.control-group{:class => error ? 'has-error' : ''}
   =f.label :media_type_id, :class => 'control-label'
   .controls
-    =f.select :media_type_id, :options => Media::MEDIA_TYPES, :class => 'input-xlarge input-with-feedback',:include_blank => true
+    =f.select :media_type_id, :options => MediaType.all.collect {|mt| [ mt.name, mt.id ] }, :class => 'input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
+
     %span.help-inline=error ? f.error_message_on(:media_type_id, :class => 'text-error') : pat(:example)
 - error = @media.errors.include?(:location)
 %fieldset.control-group{:class => error ? 'has-error' : ''}
