--- a/public/admin/stylesheets/custom.css
+++ b/public/admin/stylesheets/custom.css
@@ -13,3 +13,9 @@ textarea {
 ul.nav li.dropdown:hover > ul.dropdown-menu{
     display: block;
 }
+
+td.list-column ul {
+    padding:0px;
+    margin:0px;
+    list-style-type:none;
+}
