--- a/admin/views/news/_form.haml
+++ b/admin/views/news/_form.haml
@@ -2,7 +2,7 @@
 %fieldset.control-group{:class => error ? 'has-error' : ''}
   =f.label "Event", :class => 'control-label', :for => :media_conference_id
   .controls
-    =f.select :conference_id, :options => Conference.all.collect {|c| [ c.name, c.id ] }, :class => 'input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
+    =f.select :conference_id, :options => Conference.all.collect {|c| [ c.name, c.id ] }, :class => 'styled input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
     -#%a.btn.btn-primary{:role => "button", "data-toggle" => "modal", :href => "#modal_category"} Add New
     %span.help-inline=error ? f.error_message_on(:conference_id, :class => 'text-error') : pat(:example)
 - error = @news.errors.include?(:title)
