added attachments to host

--- a/admin/views/conferences/_form.haml
+++ b/admin/views/conferences/_form.haml
@@ -1,5 +1,5 @@
 - error = @conference.errors.include?(:category_id)
-%fieldset.control-group{:class => error ? 'has-error' : ''}
+.control-group{:class => error ? 'has-error' : ''}
   =f.label :category_id, :class => 'control-label'
   .controls
     =f.select :category_id, :options => Category.all.collect {|c| [ c.name, c.id ] }, :class => 'styled input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
@@ -7,75 +7,71 @@
     %span.help-inline=error ? f.error_message_on(:category_id, :class => 'text-error') : pat(:example)
 
 - if @conference_options && @conference_options.count > 0
-  %fieldset.control-group{:class => error ? 'has-error' : ''}
+  .control-group{:class => error ? 'has-error' : ''}
     =f.label "Parent Event", :class => 'control-label', :for => :parent_conference_id
     .controls
       =f.select :parent_conference_id, :options => @conference_options, :class => 'styled input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
       %span.help-inline=error ? f.error_message_on(:category_id, :class => 'text-error') : pat(:example)
 
 - error = @conference.errors.include?(:name)
-%fieldset.control-group{:class => error ? 'has-error' : ''}
+.control-group{:class => error ? 'has-error' : ''}
   =f.label :name, :class => 'control-label'
   .controls
     =f.text_field :name, :class => 'input-xlarge input-with-feedback', :autofocus => true
     %span.help-inline=error ? f.error_message_on(:name, :class => 'text-error') : pat(:example)
 
 - error = @conference.errors.include?(:description)
-%fieldset.control-group{:class => error ? 'has-error' : ''}
+.control-group{:class => error ? 'has-error' : ''}
   =f.label :description, :class => 'control-label'
   .controls
     ~f.text_area :description, :class => 'input-xlarge input-with-feedback'
     %span.help-inline=error ? f.error_message_on(:description, :class => 'text-error') : pat(:example)
 
 - error = @conference.errors.include?(:start_time)
-%fieldset.control-group{:class => error ? 'has-error' : ''}
+.control-group{:class => error ? 'has-error' : ''}
   =f.label :start_time, :class => 'control-label'
   .controls
     =f.text_field :start_time, :value => (f.object.start_time.nil?) ? "" : f.object.start_time.strftime('%Y/%m/%d'), :class => 'datepicker input-xlarge input-with-feedback', :style=>'width:100px;'
     %span.help-inline=error ? f.error_message_on(:start_time, :class => 'text-error') : pat(:example)
 
 - error = @conference.errors.include?(:end_time)
-%fieldset.control-group{:class => error ? 'has-error' : ''}
+.control-group{:class => error ? 'has-error' : ''}
   =f.label :end_time, :class => 'control-label'
   .controls
     =f.text_field :end_time, :value => (f.object.end_time.nil?) ? "" : f.object.end_time.strftime('%Y/%m/%d') , :class => 'datepicker input-xlarge input-with-feedback', :style=>'width:100px;'
     %span.help-inline=error ? f.error_message_on(:end_time, :class => 'text-error') : pat(:example)
 
 - error = @conference.errors.include?(:room)
-%fieldset.control-group{:class => error ? 'has-error' : ''}
+.control-group{:class => error ? 'has-error' : ''}
   =f.label :room, :class => 'control-label'
   .controls
     =f.text_field :room, :class => 'input-xlarge input-with-feedback', :style=>'width:100px;'
     %span.help-inline=error ? f.error_message_on(:room, :class => 'text-error') : pat(:example)
 
 - error = @conference.errors.include?(:fee)
-%fieldset.control-group{:class => error ? 'has-error' : ''}
+.control-group{:class => error ? 'has-error' : ''}
   =f.label :fee, :class => 'control-label'
   .controls
     =f.text_field :fee, :class => 'input-xlarge input-with-feedback', :style=>'width:100px;'
     %span.help-inline=error ? f.error_message_on(:fee, :class => 'text-error') : pat(:example)
--#- error = @conference.errors.include?(:currency_id)
--#%fieldset.control-group{:class => error ? 'has-error' : ''}
--#  =f.label :currency_id, :class => 'control-label'
--#  .controls
--#    =f.text_field :currency_id, :class => 'input-xlarge input-with-feedback'
--#    %span.help-inline=error ? f.error_message_on(:currency_id, :class => 'text-error') : pat(:example)
--#- error = @conference.errors.include?(:parent_conference_id)
--#%fieldset.control-group{:class => error ? 'has-error' : ''}
--#  =f.label :parent_conference_id, :class => 'control-label'
--#  .controls
--#    =f.text_field :parent_conference_id, :class => 'input-xlarge input-with-feedback'
--#    %span.help-inline=error ? f.error_message_on(:parent_conference_id, :class => 'text-error') : pat(:example)
 
-%fieldset.control-group
+.control-group
   = label_tag "Attending Hosts", :class => 'control-label'
   .controls
     = hidden_field_tag "conference[host_ids][]", :value => nil
-    - Host.all.each do |host|
-      = check_box_tag "conference[host_ids][]", :value => host.id, :checked => @conference.host_ids.include?(host.id), id: "host_#{host.id}"
-      = label_tag host.firstname + " " + host.lastname, :for=>"host_#{host.id}", :style=>'font-weight:normal;'
-      %br
+    %ul.unstyled
+      - Host.all.each do |host|
+        %li
+          = check_box_tag "conference[host_ids][]", :value => host.id, :checked => @conference.host_ids.include?(host.id), id: "host_#{host.id}"
+          - label_tag nil, :for=>"host_#{host.id}", :style=>'font-weight:normal;' do
+            = (host.firstname + " " + host.lastname).titleize
+%hr
+.control-group
+  = label_tag "Attachments", :class => 'control-label'
+  .controls
+    =partial '/medias/grid', :locals => { :medias => f.object.medias }
 
+%fieldset.control-group
 .form-actions
   =f.submit pat(:save), :class => 'btn btn-primary'
   &nbsp;
