--- a/public/admin/stylesheets/custom.css
+++ b/public/admin/stylesheets/custom.css
@@ -14,7 +14,7 @@ ul.nav li.dropdown:hover > ul.dropdown-menu{
     display: block;
 }
 
-td.list-column ul {
+td.list-column ul, ul.unstyled {
     padding:0px;
     margin:0px;
     list-style-type:none;
