added page header

--- a/admin/views/categories/index.haml
+++ b/admin/views/categories/index.haml
@@ -1,3 +1,4 @@
+%h1 Categories
 %ul.nav.nav-tabs
   -#%li.active=link_to tag_icon(:list, pat(:list)), url(:categories, :index)
   %li=link_to tag_icon(:plus, pat(:new)), url(:categories, :new)
