--- a/admin/views/news/index.haml
+++ b/admin/views/news/index.haml
@@ -1,6 +1,6 @@
+%h1 News
 %ul.nav.nav-tabs
   %li=link_to tag_icon(:plus, pat(:new)), url(:news, :new)
-
 .tabs-content
   %table#list.table.table-striped.table-hover.table-condensed
     %thead
