--- a/admin/views/registrants/index.haml
+++ b/admin/views/registrants/index.haml
@@ -1,3 +1,4 @@
+%h1 Registrants
 %ul.nav.nav-tabs
   -#%li.active=link_to tag_icon(:list, pat(:list)), url(:registrants, :index)
   %li=link_to tag_icon(:plus, pat(:new)), url(:registrants, :new)
