--- a/admin/views/conferences/index.haml
+++ b/admin/views/conferences/index.haml
@@ -1,3 +1,4 @@
+%h1 Events
 %ul.nav.nav-tabs
   -#%li.active=link_to tag_icon(:list, pat(:list)), url(:conferences, :index)
   %li=link_to tag_icon(:plus, pat(:new)), url(:conferences, :new)
