--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -25,14 +25,21 @@
               =button_to :logout, url(:sessions, :destroy), :method => :delete, :class => 'navbar-nav-form' do
                 =content_tag :button, tag_icon(:off), :type => :submit, :title => pat(:logout), :class => 'navbar-nav-form-link'
           %ul.nav.pull-left
-            - tabs = {'conferences' => "Events", 'news' => "News", 'categories' => "Categories", 'registrants' => "Registrants", 'hosts' => "Hosts", 'medias' => "Media", "media_types" => "Media Types"}
+            - tabs = {'conferences' => "Events", 'registrants' => "Registrants", 'hosts' => "Hosts", 'medias' => "Media", "media_types" => "Media Types"}
             - tabs.each do |val, name|
               %li{:class => "dropdown navbar-module #{('active' if request.path_info =~ /^#{'/' + val}/)}"}
                 =link_to name, "/admin/#{val}"
-                -#- if val == "medias"
-                -#  %ul.dropdown-menu
-                -#    %li
-                -#      =link_to "Media Types", "/admin/media_types"
+                - if val == "conferences"
+                  %ul.dropdown-menu
+                    %li
+                      =link_to "Categories", "/admin/categories"
+                    %li
+                      =link_to "News", "/admin/news"
+
+                - if val == "medias"
+                  %ul.dropdown-menu
+                    %li
+                      =link_to "Media Types", "/admin/media_types"
     .container.main
       .main-wrapper
         =[:error, :warning, :success, :notice].map { |type| flash_tag(type, :class => "alert alert-#{type} fade in", :bootstrap => true) }.join.html_safe
