--- a/admin/views/conferences/_form.haml
+++ b/admin/views/conferences/_form.haml
@@ -2,23 +2,23 @@
 .control-group{:class => error ? 'has-error' : ''}
   =f.label :category_id, :class => 'control-label'
   .controls
-    =f.select :category_id, :options => Category.all.collect {|c| [ c.name, c.id ] }, :class => 'styled input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
-    -#%a.btn.btn-primary{:role => "button", "data-toggle" => "modal", :href => "#modal_category"} Add New
-    %span.help-inline=error ? f.error_message_on(:category_id, :class => 'text-error') : pat(:example)
+    =f.select :category_id, :options => Category.all.collect {|c| [ c.name, c.id ] }, :class => 'input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
+    %a.btn.btn-primary.btn-small{:role => "button", "data-toggle" => "modal", :href => "#modal_new_category"} Add New
+    %span.help-inline=error ? f.error_message_on(:category_id, :class => 'text-error') : ""
 
 - if @conference_options && @conference_options.count > 0
   .control-group{:class => error ? 'has-error' : ''}
     =f.label "Parent Event", :class => 'control-label', :for => :parent_conference_id
     .controls
-      =f.select :parent_conference_id, :options => @conference_options, :class => 'styled input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
-      %span.help-inline=error ? f.error_message_on(:category_id, :class => 'text-error') : pat(:example)
+      =f.select :parent_conference_id, :options => @conference_options, :class => 'input-xlarge input-with-feedback',:include_blank => true, :style=>'width:200px;'
+      %span.help-inline=error ? f.error_message_on(:category_id, :class => 'text-error') : ""
 
 - error = @conference.errors.include?(:name)
 .control-group{:class => error ? 'has-error' : ''}
   =f.label :name, :class => 'control-label'
   .controls
     =f.text_field :name, :class => 'input-xlarge input-with-feedback', :autofocus => true
-    %span.help-inline=error ? f.error_message_on(:name, :class => 'text-error') : pat(:example)
+    %span.help-inline=error ? f.error_message_on(:name, :class => 'text-error') : ""
 
 - error = @conference.errors.include?(:description)
 .control-group{:class => error ? 'has-error' : ''}
