--- a/admin/views/categories/_form.haml
+++ b/admin/views/categories/_form.haml
@@ -1,19 +1,21 @@
+- hide_buttons ||= false
 - error = @category.errors.include?(:name)
 %fieldset.control-group{:class => error ? 'has-error' : ''}
   =f.label :name, :class => 'control-label'
   .controls
     =f.text_field :name, :class => 'input-xlarge input-with-feedback', :autofocus => true
-    %span.help-inline=error ? f.error_message_on(:name, :class => 'text-error') : pat(:example)
+    %span.help-inline=error ? f.error_message_on(:name, :class => 'text-error') : ""
 - error = @category.errors.include?(:description)
 %fieldset.control-group{:class => error ? 'has-error' : ''}
   =f.label :description, :class => 'control-label'
   .controls
     ~f.text_area :description, :class => 'input-xlarge input-with-feedback'
-    %span.help-inline=error ? f.error_message_on(:description, :class => 'text-error') : pat(:example)
+    %span.help-inline=error ? f.error_message_on(:description, :class => 'text-error') : ""
 
-.form-actions
-  =f.submit pat(:save), :class => 'btn btn-primary'
-  &nbsp;
-  =f.submit pat(:save_and_continue), :class => 'btn btn-info', :name => 'save_and_continue'
-  &nbsp;
-  =link_to pat(:cancel), url(:categories, :index), :class => 'btn'
+- if !hide_buttons
+  .form-actions
+    =f.submit pat(:save), :class => 'btn btn-primary'
+    &nbsp;
+    =f.submit pat(:save_and_continue), :class => 'btn btn-info', :name => 'save_and_continue'
+    &nbsp;
+    =link_to pat(:cancel), url(:categories, :index), :class => 'btn'
