removed debug codes and move media types under media in menu

--- a/admin/views/layouts/application.haml
+++ b/admin/views/layouts/application.haml
@@ -25,7 +25,7 @@
               =button_to :logout, url(:sessions, :destroy), :method => :delete, :class => 'navbar-nav-form' do
                 =content_tag :button, tag_icon(:off), :type => :submit, :title => pat(:logout), :class => 'navbar-nav-form-link'
           %ul.nav.pull-left
-            - tabs = {'conferences' => "Events", 'registrants' => "Registrants", 'hosts' => "Hosts", 'medias' => "Media", "media_types" => "Media Types"}
+            - tabs = {'conferences' => "Events", 'registrants' => "Registrants", 'hosts' => "Hosts", 'medias' => "Media"}
             - tabs.each do |val, name|
               %li{:class => "dropdown navbar-module #{('active' if request.path_info =~ /^#{'/' + val}/)}"}
                 =link_to name, "/admin/#{val}"
